logs/rpmvenv.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/confpy'...
Listing './lib/python3.5/site-packages/confpy/core'...
Listing './lib/python3.5/site-packages/confpy/loaders'...
Listing './lib/python3.5/site-packages/confpy/options'...
Listing './lib/python3.5/site-packages/confpy/templates'...
Listing './lib/python3.5/site-packages/confpy-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/ordereddict-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rpmvenv'...
Listing './lib/python3.5/site-packages/rpmvenv/extensions'...
Listing './lib/python3.5/site-packages/rpmvenv/extensions/blocks'...
Listing './lib/python3.5/site-packages/rpmvenv/extensions/files'...
Listing './lib/python3.5/site-packages/rpmvenv/extensions/python'...
Listing './lib/python3.5/site-packages/rpmvenv/templates'...
Listing './lib/python3.5/site-packages/rpmvenv-0.17.0.egg-info'...
Listing './lib/python3.5/site-packages/semver-2.7.9.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/venvctrl'...
Listing './lib/python3.5/site-packages/venvctrl/cli'...
Listing './lib/python3.5/site-packages/venvctrl/venv'...
Listing './lib/python3.5/site-packages/venvctrl-0.2.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
